# dimebox

./: CMakeLists.txt  README.md  TODO.txt
include/: core_control.h  core_state.h  debug_server.h  dimebox.h  dimeboxVersion.h.in  elfio.h  exceptions.h  exclusive_monitor.h  instruction.h  memory.h  memory_access.h  mmu.h  packet.h  physical_memory.h  registers.h  riscv_core_control.h  riscv_core_state.h  riscv_debug_server.h  riscv_instruction.h  riscv_packet.h  riscv_simulator.h  sim_config.h  simulator.h  tcp_server.h  timer.h  uart.h  uart_pl011.h
isa_test_images/rv32mi-p-csr/: rv32mi-p-csr.elf  rv32mi-p-csr.test_sim_log
isa_test_images/rv32mi-p-ma_fetch/: rv32mi-p-ma_fetch.elf  rv32mi-p-ma_fetch.test_sim_log
isa_test_images/rv32mi-p-mcsr/: rv32mi-p-mcsr.elf  rv32mi-p-mcsr.test_sim_log
isa_test_images/rv32ui-p-add/: rv32ui-p-add.elf  rv32ui-p-add.test_sim_log
isa_test_images/rv32ui-p-addi/: rv32ui-p-addi.elf  rv32ui-p-addi.test_sim_log
isa_test_images/rv32ui-p-and/: rv32ui-p-and.elf  rv32ui-p-and.test_sim_log
isa_test_images/rv32ui-p-andi/: rv32ui-p-andi.elf  rv32ui-p-andi.test_sim_log
isa_test_images/rv32ui-p-auipc/: rv32ui-p-auipc.elf  rv32ui-p-auipc.test_sim_log
isa_test_images/rv32ui-p-beq/: rv32ui-p-beq.elf  rv32ui-p-beq.test_sim_log
isa_test_images/rv32ui-p-bge/: rv32ui-p-bge.elf  rv32ui-p-bge.test_sim_log
isa_test_images/rv32ui-p-bgeu/: rv32ui-p-bgeu.elf  rv32ui-p-bgeu.test_sim_log
isa_test_images/rv32ui-p-blt/: rv32ui-p-blt.elf  rv32ui-p-blt.test_sim_log
isa_test_images/rv32ui-p-bltu/: rv32ui-p-bltu.elf  rv32ui-p-bltu.test_sim_log
isa_test_images/rv32ui-p-bne/: rv32ui-p-bne.elf  rv32ui-p-bne.test_sim_log
isa_test_images/rv32ui-p-fence_i/: rv32ui-p-fence_i.elf  rv32ui-p-fence_i.test_sim_log
isa_test_images/rv32ui-p-jal/: rv32ui-p-jal.elf  rv32ui-p-jal.test_sim_log
isa_test_images/rv32ui-p-jalr/: rv32ui-p-jalr.elf  rv32ui-p-jalr.test_sim_log
src/: core_control.C  debug_server.C  elfio.C  libelf_interface.c  main.C  memory.C  physical_memory.C  program_options.C  riscv_core_control.C  riscv_core_state.C  riscv_instruction.C  riscv_simulator.C  rsp.C  rv32i_instrs.C  sim_config.C  simulator.C  tcp_server.C  timer.C  uart.C  uart_pl011.C
tests/: build_tests.sh  wfi_timer.S
tests/hello_world/: Makefile  (+2 more)
tools/: get_boost.sh  get_elftoolchain.sh
utils/: RESIM_ISA_TESTS.pl  RUN_OVPsim.sh  RUN_RV32UI_P_TESTS.pl  RUN_dimebox.sh  VERIFY_TEST.sh  make_rv32i_iclasses.pl  reformat_dimebox_trace.pl  reformat_ovp_trace.pl
(+69 files in other folders)
